# eve-agents

./: .dockerignore  .gitignore  CLAUDE.md  CONCEPTS.md  DUELING_WIZARDS_REPORT.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.playwright-mcp/: page-2026-07-06T22-12-30-162Z.yml
agents/doc-intel/: .gitignore  README.md  package.json  tsconfig.json
agents/doc-intel/agent/: instructions.md
agents/doc-intel/analysts/: Dockerfile  pyproject.toml
agents/doc-intel/analysts/infra/: .gitignore  README.md  main.bicep  main.bicepparam  main.json
agents/doc-intel/analysts/infra/modules/: key-vault-secrets-user.bicep
agents/doc-intel/analysts/src/doc_intel_analysts/: agent.py  corpus.py  service.py
agents/doc-intel/analysts/src/doc_intel_analysts/evidence/: __init__.py  api.py  benchmark.py  config.py  ingest.py  latency_bench.py  parse.py  replica.py  retrieval.py  snapshot.py  store.py
agents/doc-intel/analysts/src/doc_intel_analysts/graph/: api.py  config.py  export.py  individuals.py  ingest.py  runtime.py
agents/doc-intel/analysts/terraform/: README.md  jobs.tf  main.tf  outputs.tf  service.tf  storage.tf  variables.tf
agents/doc-intel/analysts/tests/: test_agent.py  test_corpus.py  test_evidence_api.py  test_evidence_benchmark.py  test_evidence_config.py  test_evidence_parse.py  test_evidence_retrieval.py  test_evidence_snapshot.py  test_evidence_store.py  test_export.py  test_graph_api.py  test_graph_config.py  test_individuals.py  test_ingest.py  test_latency_bench.py  test_ontology.py  test_replica.py  test_service_auth.py
agents/doc-intel/evals/: delegation.eval.ts  evals.config.ts  evidence-coverage.eval.ts  graph-explore.eval.ts  graph-pad-tandem.eval.ts  graph-wildcat-tandem.eval.ts  ledger-status.eval.ts
agents/doc-intel/tests/: analysts_lib.test.ts  (+13 more)
agents/starter/: package-lock.json  package.json  tsconfig.json
benchmark/: README.md  evidence-questions.json  questions.json
benchmark/results/: 2026-07-05-run2.json  2026-07-05-run3-notes.md  2026-07-05-run3.json  2026-07-05-verification.md  2026-07-06-memory-gates.md  2026-07-06-ontology-individuals-gates.md  2026-07-06-u7-spot-check-list.md  2026-07-07-evidence-store-phase-a.md  2026-07-07-westlake-checkpoint.md  2026-07-11-phase2-s3-latency.json  2026-07-13-phase4-nfs-gate-run1.json  2026-07-13-phase4-nfs-gate-run4-final.json
corpus/: README.md  sample-manifest.csv
decisions/: 2026-07-05-doc-intel-seam.md  2026-07-05-repo-topology.md  2026-07-06-evidence-read-vision-mechanism.md  2026-07-07-context-layer-answer-ledger.md  2026-07-09-evidence-store-migration.md  2026-07-10-selective-graph-enrichment.md  2026-07-11-agent-runs-trace-retention.md  2026-07-12-company-brain-shared-recall.md
docs/plans/: 2026-07-05-001-feat-doc-intel-memory-plan.md  2026-07-06-001-feat-ontology-individuals-plan.md  2026-07-06-002-feat-evidence-store-plan.md  2026-07-10-001-fix-image-pixel-cap-plan.md  2026-07-11-001-feat-skipped-ledger-query-tool-plan.md  2026-07-12-001-feat-phase4-azure-evidence-hosting-plan.md
references/: analyst-classes.json  eve-conventions.md  evidence-store.md  graph-export.md
references/ontology/: README.md  aliases.csv  welldrive.owl
skills/: adding-a-tool.md
(+37 files in other folders)
