[project]
name = "doc-intel-analysts"
version = "0.1.0"
description = "deepagents analyst service for the doc-intel eve agent"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.12",
    "langchain>=1.0",
    "langchain-openai>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "boto3>=1.35",
    "cognee>=1.2.2,<1.3",
    # Evidence store (approved 2026-07-06): lancedb pinned to cognee's
    # resolved version so promotion to a direct dependency changes nothing.
    "lancedb==0.34.0",
    "liteparse>=2.4",
    "open-clip-torch>=2.24",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/doc_intel_analysts"]
