[project]
name = "doc-intel-analysts"
version = "0.1.0"
description = "deepagents analyst service for the doc-intel eve agent"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6.12",
    "langchain>=1.0",
    "langchain-openai>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "boto3>=1.35",
    "cognee>=1.2.2,<1.3",
    # Evidence store (approved 2026-07-06): lancedb pinned to cognee's
    # resolved version so promotion to a direct dependency changes nothing.
    # 0.34.0 re-verified as the newest stable on PyPI 2026-07-13.
    "lancedb==0.34.0",
    # Lance-format maintenance path (approved 2026-07-13, anticipated by
    # decisions/2026-07-09-evidence-store-migration.md): pylance raised off
    # the 2025-09 0.36.0 vintage, whose lance-encoding decoder panics on
    # bulk reads of compacted tables ("sliced Buffer cannot exceed existing
    # length"). lancedb 0.34.0's own pylance extra wants >=5.0.0b5; 8.0.0 is
    # the newest stable. Requires the [tool.uv] override below.
    "pylance==8.0.0",
    "liteparse>=2.4",
    "open-clip-torch>=2.24",
]

[tool.uv]
package = true
# cognee (<=1.3.0) still caps pylance at <=0.36.0 but never imports lance at
# runtime (verified 2026-07-13: no `import lance` anywhere in the installed
# package) — the cap is vestigial. Override it so the direct pylance pin
# above can resolve; drop this once cognee lifts its ceiling.
override-dependencies = ["pylance==8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/doc_intel_analysts"]
